# wasm_demo

./: .gitignore  README.md
1_browsers_jco/: Cargo.toml  Makefile  package-lock.json  package.json
1_browsers_jco/tests/: jco.html
1_browsers_jco/wit/: world.wit
2_cloud_cli/: Cargo.toml  Dockerfile  Makefile
2_cloud_cli/src/: main.rs
3_cloud_http/: Cargo.toml  Makefile
3_cloud_http/src/: lib.rs
3_cloud_http/wit/: world.wit
4_plugin_python/: Cargo.toml  Makefile
4_plugin_python/tests/: python.py  python_2.py
5_plugin_ruby/: .gitignore  Cargo.toml  Makefile
5_plugin_ruby/src/: lib.rs
5_plugin_ruby/tests/: ruby.rb
5_plugin_ruby/wit/: world.wit
guest/hello_world_imports_rust/: Cargo.toml  Makefile
guest/hello_world_imports_rust/src/: lib.rs
guest/hello_world_imports_rust/wit/: world.wit
guest/hello_world_js/: Makefile  hello.js
guest/hello_world_js/wit/: world.wit
guest/hello_world_rust/: Cargo.toml  Makefile
guest/hello_world_rust/src/: lib.rs
guest/hello_world_rust/wit/: world.wit
guest/wasi_cli_rust/: .gitignore  Cargo.toml  Makefile
guest/wasi_cli_rust/src/: lib.rs
guest/wasi_cli_rust/wit/: world.wit
guest/wasi_http_rust/: .gitignore  Cargo.toml  Makefile
guest/wasi_http_rust/src/: lib.rs
guest/wasi_http_rust/wit/: world.wit
host/browsers_jco/: Makefile  package-lock.json  package.json
host/browsers_jco/tests/: jco.html
host/browsers_jco/tests/hello_world_imports_rust/: formatter.js  index.html
host/browsers_jco/tests/hello_world_rust/: index.html
host/cloud_cli/: .gitignore  Dockerfile  Makefile
host/cloud_http/: Makefile
host/docker_cli/: Dockerfile
host/docker_http/: Dockerfile  Makefile
host/plugin_nodejs/: .gitignore  Makefile  package-lock.json  package.json
host/plugin_nodejs/tests/hello_world_imports_rust/: index.js
host/plugin_nodejs/tests/hello_world_rust/: index.js
host/plugin_python/: .gitignore  Makefile  hello_world_imports_rust.py  hello_world_js.py  hello_world_rust.py  python.py  utils.py
host/plugin_ruby/: Makefile  ruby.rb
host/spin_http/: Makefile  spin.toml
host/wasmcloud_http/: Makefile  wadm.yaml
